package globingular.core;

import java.util.HashMap;
import java.util.Set;

public class World {

    /**
     * SetProperty containing every Country that exists in this World. Assumed to be append-only.
     */
    private final Set<Country> countries;
    /**
     * Existing countries by countryCodes according to the ISO 3166-1 alpha-2 standard.
     * Values must be bijection with the countries-set.
     */
    private final HashMap<String, Country> countriesByCode = new HashMap<>();
    /**
     * Existing countries by short name.
     * Values must be bijection with the countries-set.
     */
    private final HashMap<String, Country> countriesByName = new HashMap<>();

    /**
     * Get an existing Country (registered to this instance) by its countryCode.
     *
     * @param countryCode ISO two-letter country-code of the target Country
     * @return The target Country if existing, otherwise null
     */
    public Country getCountryFromCode(final String countryCode) {
        return countriesByCode.get(countryCode);
    }

    /**
     * Get an existing Country (registered to this instance) by its name.
     *
     * @param countryName Short-name of the target Country
     * @return The target Country if existing, otherwise null
     */
    public Country getCountryFromName(final String countryName) {
        return countriesByName.get(countryName);
    }

    /**
     * Get the immutable set containing existing countries.
     *
     * @return Immutable set containing existing countries
     */
    public Set<Country> getCountries() {
        return countries;
    }

    /**
     * Create a World containing an immutable set of countries, where every country has a unique short name and
     * ISO 3166-1 Alpha-2 country-code.
     *
     * @param countries The list of every country this world contains
     * @throws DuplicateIdentifierException If two countries have the same countryCode or short name
     */
    public World(final Country... countries) {
        for (final Country country : countries) {
            final Country duplicateCode = getCountryFromCode(country.getCountryCode());
            final Country duplicateName = getCountryFromName(country.getName());

            if (duplicateCode != null) {
                throw new DuplicateIdentifierException(
                        "Country cannot be added because it duplicates existing code \""
                                + duplicateCode.getCountryCode() + "\" from Country \"" + duplicateCode.getName()
                                + "\"");
            }
            if (duplicateName != null) {
                throw new DuplicateIdentifierException(
                        "Country cannot be added because it duplicates existing name \""
                                + duplicateName.getName() + "\" from Country with code \"" + duplicateName
                                .getCountryCode()
                                + "\"");
            }
            countriesByCode.put(country.getCountryCode(), country);
            countriesByName.put(country.getName(), country);
        }
        this.countries = Set.of(countries);
    }

    /**
     * Check if the provided Country exists in this World.
     *
     * @param country The Country to check
     * @return Whether the Country exists in this World
     */
    public boolean countryExists(final Country country) {
        return countries.contains(country);
    }
}
