package globingular.ui;

import globingular.core.Country;
import globingular.core.CountryCollector;
import globingular.core.CountryStatistics;
import globingular.core.World;
import globingular.persistence.PersistenceHandler;
import javafx.collections.SetChangeListener;
import javafx.concurrent.Worker;
import javafx.css.PseudoClass;
import javafx.fxml.FXML;
import javafx.fxml.Initializable;
import javafx.scene.Parent;
import javafx.scene.control.Button;
import javafx.scene.control.Label;
import javafx.scene.control.ListCell;
import javafx.scene.control.ListView;
import javafx.scene.control.SelectionMode;
import javafx.scene.control.TextField;
import javafx.scene.web.WebEngine;
import javafx.scene.web.WebView;
import org.w3c.dom.Document;
import org.w3c.dom.Element;
import org.w3c.dom.events.EventTarget;

import java.net.URL;
import java.util.Collection;
import java.util.ResourceBundle;

/**
 * <p>The AppController class handles the interaction between the FXML-file and
 * the back-end logic of the app. It makes use of several classes in core,
 * and thus is able to display the data in the JSON-file in the GUI.</p>
 * 
 * <p>The AppController has several methods, e.g.:
 * <ul>
 * <li>initializing items in the GUI correctly</li>
 * <li>updating what's viewed on the screen</li>
 * <li>adding and deleting countries from the visited countries list</li>
 * </ul>
 * </p>
 */

public class AppController implements Initializable {

    /**
     * Pseudoclass designating that an form element has invalid input.
     */
    public static final PseudoClass INVALID = new PseudoClass() {
        @Override
        public String getPseudoClassName() {
            return "invalid";
        }
    };
    /**
     * Pseudoclass designating that an form element has blank input.
     */
    public static final PseudoClass BLANK = new PseudoClass() {
        @Override
        public String getPseudoClassName() {
            return "blank";
        }
    };

    /**
     * Name of the Javascript-const in the WebView set to the map SVG-element.
     */
    private static final String MAP_ELEMENT_NAME = "countryMap";

    /**
     * ID of the map SVG element in the WebView.
     */
    private static final String MAP_ELEMENT_ID = "Earth";

    /**
     * The HTML-attribute declaring that this element is a visited country.
     * Also serves as the value of the attribute, if set.
     */
    private static final String MAP_VISITED_COUNTRY_ATTRIBUTE = "visited";

    /**
     * The root of the FXML document.
     */
    @FXML
    private Parent root;
    /**
     * The list of countries visible in the interface.
     */
    @FXML
    private ListView<Country> countriesList;
    /**
     * The input for country-shortnames or -codes visible in the interface.
     */
    @FXML
    private TextField countryInput;
    /**
     * The button for marking the inputted country-code as visited.
     */
    @FXML
    private Button countryAdd;
    /**
     * The button for marking the inputted country-code as not visited.
     */
    @FXML
    private Button countryDel;
    /**
     * The WebView containing the world map.
     */
    @FXML
    private WebView webView;

    /**
     * A label containing a string with the number of countries visited.
     */
    @FXML
    private Label numberOfCountriesVisited;

    /**
     * A label with a string of the most populated country visited.
     */
    @FXML
    private Label mostPopulatedVisitedCountry;

    /**
     * The WebEngine for the world map.
     */
    private WebEngine webEngine;
    /**
     * Responsible for persisting state across runs.
     */
    private final PersistenceHandler persistence;
    /**
     * Manager of which countries have been visited.
     */
    private final CountryCollector countryCollector;
    /**
     * Manager of which countries exist.
     */
    private final World world;
    /**
     * Helper field containing whichever Country the input field currently resolves to, if any.
     */
    private Country inputCountry = null;
    /**
     * The HTML Document containing the world map.
     */
    private Document document;

    /**
     * Manager of statistics about countries the user has visited.
     */
    private CountryStatistics countryStatistics;

    /**
     * Initialize fields which do not require FXML to be loaded.
     */
    public AppController() {
        // Create a persistenceHandler
        persistence = new PersistenceHandler();
        // Use it to retrieve CountryCollector from file
        countryCollector = persistence.loadMapCountryCollector();
        // And register it for autosaving
        persistence.setAutosave(countryCollector);

        // Initialize a countryStatistics
        countryStatistics = new CountryStatistics(countryCollector);

        // Get world-instance
        world = countryCollector.getWorld();
    }

    /**
     * Initialize the controller on load.
     */
    @Override
    public void initialize(final URL location, final ResourceBundle resources) {
        this.webEngine = webView.getEngine();

        countryCollector.visitedCountriesProperty()
                        .addListener((SetChangeListener<? super Country>) e -> {
                            if (e.wasAdded()) {
                                setVisitedOnMap(e.getElementAdded());
                            } else {
                                setNotVisitedOnMap(e.getElementRemoved());
                            }
                        });
        countryCollector.visitedCountriesProperty()
                        .addListener((SetChangeListener<? super Country>) e -> {
                            updateStatistics();
                        });

        initializeCountriesList();

        countryInput.textProperty().addListener(e -> onInputChange());
        root.getStylesheets().add(getClass().getResource("/fxml-css/App.css").toExternalForm());

        webEngine.load(getClass().getResource("/html/world.html").toExternalForm());

        // Operations to perform when SVG has loaded
        webEngine.getLoadWorker().stateProperty().addListener(((observableValue, state, t1) -> {
            if (t1 == Worker.State.SUCCEEDED) {
                this.document = webEngine.getDocument();
                webEngine.executeScript("const " + MAP_ELEMENT_NAME + " = document.getElementById('" + MAP_ELEMENT_ID
                        + "').getSVGDocument();");
                registerClickListenersOnExistingCountries();
                setVisitedOnMapAll(countryCollector.getVisitedCountries());
            }
        }));
        updateStatistics();
    }

    /**
     * Get the active CountryCollector for the world map.
     *
     * @return The active CountryCollector for the world map
     */
    public CountryCollector getCountryCollector() {
        return countryCollector;
    }

    /**
     * Add the inputted country-code to list of visited countries.
     */
    @FXML
    void onCountryAdd() {
        String input = countryInput.getText();
        if (!input.isBlank()) {
            Country countryByCode = world.getCountryFromCode(input);
            Country countryByName = world.getCountryFromName(input);
            if (countryByCode != null) {
                countryCollector.registerVisit(countryByCode);
                countryInput.clear();
            } else if (countryByName != null) {
                countryCollector.registerVisit(countryByName);
                countryInput.clear();
            } else {
                countryInput.pseudoClassStateChanged(INVALID, true);
            }

        }
    }

    /**
     * Register a click listener on every SVG element representing an entire Country registered in this world.
     */
    private void registerClickListenersOnExistingCountries() {
        for (Country country : world.getCountries()) {
            try {
                final Element countryElement = getCountryMapElement(country);
                if (countryElement == null) {
                    System.out.println(
                            "Given country does not exist on map as id: " + country.getCountryCode());
                } else {
                    ((EventTarget) countryElement).addEventListener("click",
                            e -> {
                                if (countryCollector.isVisited(country)) {
                                    countryCollector.removeAllVisitsToCountry(country);
                                } else {
                                    countryCollector.registerVisit(country);
                                }
                            },
                            true);
                }
            } catch (ClassCastException e) {
                System.out.println("Given country does not exist on map: " + country);
            }
        }
    }

    /**
     * Evaluate new state after a change in the country input element.
     */
    private void onInputChange() {
        String input = countryInput.getText();
        if (input.isBlank()) {
            countryInput.pseudoClassStateChanged(BLANK, true);
            countryInput.pseudoClassStateChanged(INVALID, false);
        } else {
            Country countryByCode = world.getCountryFromCode(input);
            Country countryByName = world.getCountryFromName(input);

            if (countryByCode != null) {
                inputCountry = countryByCode;
                countryInput.pseudoClassStateChanged(INVALID, false);
            } else if (countryByName != null) {
                inputCountry = countryByName;
                countryInput.pseudoClassStateChanged(INVALID, false);
            } else {
                inputCountry = null;
                countryInput.pseudoClassStateChanged(INVALID, true);
            }
            countryInput.pseudoClassStateChanged(BLANK, false);
        }
    }

    /**
     * Remove the inputted country-code from list of visited countries.
     */
    @FXML
    void onCountryDel() {
        String input = countryInput.getText();
        if (!input.isBlank()) {
            if (!countryInput.getPseudoClassStates().contains(INVALID)) {
                countryInput.clear();
            }
            countryCollector.removeAllVisitsToCountry(inputCountry);
        } else {
            // Array conversion necessary to prevent the removal of items from foreach-target
            for (Country country
                    : countriesList.getSelectionModel().getSelectedItems().toArray(Country[]::new)) {
                countryCollector.removeAllVisitsToCountry(country);
            }
        }
        countriesList.getSelectionModel().clearSelection();
    }

    /**
     * Set the attribute "visited" for the given Country's map representation, allowing custom css styling.
     *
     * @param country Target country
     */
    private void setVisitedOnMap(final Country country) {
        // Abort if map hasn't fully loaded
        if (document == null) {
            return;
        }

        getCountryMapElement(country).setAttribute(MAP_VISITED_COUNTRY_ATTRIBUTE, MAP_VISITED_COUNTRY_ATTRIBUTE);
    }

    /**
     * Unset the attribute "visited" for the given Country's map representation, removing custom css styling.
     *
     * @param country Target country
     */
    private void setNotVisitedOnMap(final Country country) {
        // Abort if map hasn't fully loaded
        if (document == null) {
            return;
        }

        getCountryMapElement(country).removeAttribute(MAP_VISITED_COUNTRY_ATTRIBUTE);
    }

    /**
     * Change displayed color on the world map for the given countries.
     *
     * @param countries Target countries
     */
    private void setVisitedOnMapAll(final Collection<Country> countries) {
        for (Country country : countries) {
            setVisitedOnMap(country);
        }
    }

    /**
     * Set the attribute "visited" for the given countries' map representations, allowing custom css styling.
     *
     * @param countries Target countries
     */
    private void setNotVisitedOnMapAll(final Collection<Country> countries) {
        for (Country country : countries) {
            setNotVisitedOnMap(country);
        }
    }

    /**
     * Update statistics view in the UI.
     */
    private void updateStatistics() {
        numberOfCountriesVisited.setText(countryStatistics.getNumberOfVisitedCountries());
        mostPopulatedVisitedCountry.setText(countryStatistics.getMostPopulatedVisitedCountry());
    }

    /**
     * Unset the attribute "visited" for the given countries' map representations, removing custom css styling.
     */
    private void initializeCountriesList() {
        countriesList.itemsProperty().set(countryCollector.getVisitedCountriesSorted());
        countriesList.getSelectionModel().setSelectionMode(SelectionMode.MULTIPLE);
        countriesList.setCellFactory(countryListView -> new ListCell<>() {
            @Override
            protected void updateItem(final Country item, final boolean empty) {
                super.updateItem(item, empty);
                setText(item == null ? "" : item.getShortName());
            }
        });
    }

    /**
     * Find the element on the map representing the given Country.
     *
     * @param country Country to find the map element of
     * @return Country element in map
     * @throws ClassCastException If element does not exist
     */
    private Element getCountryMapElement(final Country country) {
        return (Element) webEngine
                .executeScript(MAP_ELEMENT_NAME + ".getElementById('" + country.getCountryCode() + "')");
    }
}
